# app-graphics3d

MyPlace2025/: _.cpp  _.h  app_graphics3d_MyPlace2025.vcxproj  application.cpp  application.h  document.cpp  document.h  impact.cpp  impact.h  main_frame.cpp  main_frame.h  pane_impact.cpp  pane_impact.h
_matter/: deployment.rc
aaa_draw2d_direct2d_directx12/: _.h  _constant.h  _factory.cpp  aaa__library.h  aaa_bitmap.h  aaa_graphics.cpp  aaa_graphics.h  deployment.rc  draw2d.cpp  draw2d.h  draw2d_direct2d_directx12.vcxproj  draw2d_direct2d_directx12.vcxproj.filters  end_draw.cpp  end_draw.h  m_draw2d_direct2d_directx12.vcxproj  m_draw2d_direct2d_directx12.vcxproj.filters  u_draw2d_direct2d_directx12.def
app_shader/: app_shader.cbp  app_shader.nsi  cpp.txt
continuum/: CMakeLists.txt  _.cpp  _.h  app_graphics3d_continuum.vcxproj  app_graphics3d_continuum.vcxproj.filters  application.cpp  application.h  document.cpp  document.h  global_ubo.h  impact.cpp  impact.h  main_frame.cpp  main_frame.h  matter.txt  pane_impact.cpp  pane_impact.h
cube/: _.h  application.cpp  application.h  camera.cpp  camera.h  context.cpp  context.h  cube.vcxproj  cube.vcxproj.filters  document.cpp  document.h  engine.cpp  engine.h  frame.cpp  frame.h  framework.h  impact.cpp  impact.h  key_map.cpp  key_map.h  model.cpp  model.h  scene.cpp  scene.h  scene_object.cpp  scene_object.h  types.h  utilities.h
direct2d_directx12/: _.h  _factory.cpp  _universal_windows.cpp  aaa__library.h  aaa_font.cpp  aaa_global.cpp  aaa_multithreading_lock.h  aaa_path.cpp  direct2d_directx12.cpp  direct2d_directx12.def  direct2d_directx12.h  direct2d_directx12.vcxproj  direct2d_directx12.vcxproj.filters  draw2d1.cpp  geometry.cpp  geometry.h  geometry_sink_text_renderer.cpp  geometry_sink_text_renderer.h  graphics.cpp  graphics.h  multithreading_lock.cpp  object.cpp  object.h  u_direct2d_directx12.def  u_direct2d_directx12.vcxproj  u_direct2d_directx12.vcxproj.filters
draw2d_direct2d_directx12/: _.h  _factory.cpp  aaa_graphics.cpp  aaa_graphics.h  aaa_image.cpp  aaa_image.h  aaa_object.cpp  aaa_palette.h  aaa_path.cpp  aaa_printer.h  aaa_region.h  bitmap.cpp  brush.cpp  brush.h  draw2d_direct2d_directx12.def  draw2d_direct2d_directx12.vcxproj  draw2d_direct2d_directx12.vcxproj.filters  end_draw.cpp  end_draw.h  factory_exchange.h  font.cpp  font.h  object.h  (+11 more)
graphics3d_directx/: CMakeLists.txt  _.cpp  _.h  _directx.h  _factory.cpp  aaa_application_handler.cpp  aaa_application_handler.h  aaa_buffer.cpp  aaa_context.h  aaa_frame.h  aaa_input.cpp  aaa_pipeline.cpp  aaa_renderer.h  aaa_shader.h  aaa_vkc_types.h  aaa_window.cpp  aaa_window.h  buffer.h  camera.cpp  camera.h  context.cpp  deployment.rc  descriptors.cpp  descriptors.h  engine.cpp  engine.h  frame.h  graphics3d_directx.vcxproj  graphics3d_directx.vcxproj.filters  initializers.cpp  initializers.h  input.cpp  input.h  model.cpp  model.h  offscreen.cpp  offscreen_render_pass.h  pipeline.h  render_pass.cpp  render_pass.h  (+12 more)
graphics3d_directx/aaa_system/: basic_render_system.cpp  basic_render_system.h  point_light_system.cpp  point_light_system.h
graphics3d_directx/graphics3d_directx.xcodeproj/: project.pbxproj
graphics3d_directx11/: CMakeLists.txt  _.cpp  _.h  _directx11.h  _factory.cpp  aaa_application_handler.cpp  aaa_application_handler.h  aaa_buffer.cpp  aaa_camera.cpp  aaa_context.cpp  aaa_context.h  aaa_frame.h  aaa_input.cpp  aaa_pipeline.cpp  aaa_renderer.h  aaa_shader.cpp  aaa_shader.h  aaa_vkc_types.h  aaa_window.h  app-Info.plist  buffer.h  camera.h  context.cpp  descriptors.cpp  descriptors.h  engine.cpp  engine.h  frame.h  graphics3d_directx11.vcxproj  graphics3d_directx11.vcxproj.filters  initializers.cpp  initializers.h  input.h  model.cpp  model.h  offscreen.cpp  offscreen_render_pass.h  pipeline.h  render_pass.cpp  render_pass.h  (+11 more)
graphics3d_directx11/aaa_system/: basic_render_system.cpp  basic_render_system.h  point_light_system.cpp  point_light_system.h
graphics3d_directx11/graphics3d_directx11.xcodeproj/: project.pbxproj
graphics3d_directx12/: CMakeLists.txt  Package.appxmanifest  _.cpp  _.h  _directx12.h  _factory.cpp  aaa_application_handler.cpp  aaa_application_handler.h  aaa_buffer.cpp  aaa_camera.cpp  aaa_context.cpp  aaa_context.h  aaa_frame.h  aaa_input.cpp  aaa_pipeline.cpp  aaa_renderer.h  aaa_shader.cpp  aaa_shader.h  aaa_vkc_types.h  aaa_window.h  and_vulken.vcxproj  buffer.h  camera.h  descriptors.cpp  descriptors.h  engine.cpp  engine.h  engine_direct2d_draw2d_swap_chain.cpp  frame.h  graphics3d_directx12.vcxproj  graphics3d_directx12.vcxproj.filters  initializers.cpp  initializers.h  input.h  m_graphics3d_directx12.def  m_vulken.vcxproj.filters  model.cpp  model.h  offscreen.cpp  offscreen_render_pass.h  (+14 more)
graphics3d_directx12/aaa_system/: basic_render_system.cpp  basic_render_system.h  point_light_system.cpp  point_light_system.h
graphics3d_directx12/graphics3d_directx12.xcodeproj/: project.pbxproj
graphics3d_directx12/vulken!!.xcodeproj/: project.pbxproj
hello3d/: CMakeLists.txt  _.cpp  _.h  _factory.cpp  _main.inl  _references.txt  aaa_app_graphics3d_hello3d.h  aaa_want_to_remove_complex_hello3d_main_view.cpp  app_graphics3d_hello3d.vcxproj  app_graphics3d_hello3d.vcxproj.filters  application.cpp  application.h  deployment.rc  document.cpp  document.h  frame.cpp  frame.h  framework.h  impact.cpp  impact.h  main_frame.cpp  main_frame.h  matter.txt  pane_impact.cpp  pane_impact.h  render.cpp  render.h  render_arcs.cpp  render_rectangle.cpp  render_triangle.cpp  shader_object.cpp  static_app_graphics3d_hello3d.vcxproj  this_part_of_code  u_app_graphics3d_hello3d.vcxproj.filters
hello3d/3d_sample_files/small_table_HSM0017_v2_L1.123ccf0df7bb-57bf-453f-aa95-f6dc66a4978e/HSM0017_v2_L1.123ccf0df7bb-57bf-453f-aa95-f6dc66a4978e/: HSM0017.mtl
hello3d/__implement/: CMakeLists.txt  main.cpp  main.rc  shared_app_graphics3d_hello3d.vcxproj
hello3d/app_graphics3d_hello3d.xcodeproj/: project.pbxproj
hello3d/en.lproj/: InfoPlist.strings
hello3d/ios_shader.xcodeproj/: project.pbxproj
hello3d/shader.xcodeproj/: project.pbxproj
(+780 files in other folders)
